# Tag-Flow

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/adapters/collectors/: __init__.py  ozon.py  wildberries.py  yandex.py
src/adapters/llm/: __init__.py  client.py  responder.py  tagger.py
src/adapters/senders/: __init__.py  ozon.py  wildberries.py  yandex.py
src/domain/: enums.py  exceptions.py
src/domain/entities/: __init__.py  item.py  response.py  send_log.py  tag.py
src/domain/interfaces/: __init__.py  collector.py  repository.py  responder.py  sender.py  tagger.py
src/infrastructure/: circuit_breaker.py  config.py  container.py  database.py  logger.py  metrics.py  scheduler.py
src/infrastructure/migrations/: runner.py
src/infrastructure/migrations/versions/: 001_initial.sql  002_metrics.sql  003_extended_tags.sql  004_responsibility.sql
src/repositories/: __init__.py  base.py  items.py  responses.py  send_log.py  tags.py
src/services/: __init__.py  collection.py  pipeline.py  responding.py  sending.py  tagging.py
tests/: conftest.py
tests/unit/: test_config.py  test_tagger.py
